variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbPas
nbPas=0
^Variables:5: error: not found: value nbPas
  nbPas=nbPas+1
  ^